heading custom field: change value input to textarea

--- a/public/agility/html/heading-field-template.html
+++ b/public/agility/html/heading-field-template.html
@@ -35,12 +35,11 @@
       </label>
       <label for="heading-value">
         <b>Value</b>
-        <input
+        <textarea
           id="heading-value"
-          type="text"
           class="form-control"
           data-bind="textInput: fieldBinding().text"
-        />
+        ></textarea>
       </label>
       <label for="heading-classes">
         <b>Custom CSS classes (Optional)</b>
