--- a/public/agility/html/heading-field-template.html
+++ b/public/agility/html/heading-field-template.html
@@ -6,6 +6,9 @@
         display: flex;
         flex-direction: column;
         align-items: flex-start;
+        justify-content: flex-start;
+        border: 1px solid #ccc;
+        padding: 6px 8px;
       }
       label {
         padding: 1rem 0;
@@ -34,7 +37,7 @@
         </select>
       </label>
       <label for="heading-value">
-        <b>Value</b>
+        <b>Text</b>
         <textarea
           id="heading-value"
           class="form-control"
@@ -42,7 +45,7 @@
         ></textarea>
       </label>
       <label for="heading-classes">
-        <b>Custom CSS classes (Optional)</b>
+        <b>CSS classes (Optional)</b>
         <input
           id="heading-classes"
           type="text"
