revert adding custom heading field color option

--- a/public/agility/html/heading-field-template.html
+++ b/public/agility/html/heading-field-template.html
@@ -46,7 +46,7 @@
           data-bind="textInput: fieldBinding().text"
         ></textarea>
       </label>
-      <label for="heading-color">
+      <!--       <label for="heading-color">
         <b>Color</b>
         <select id="heading-color" data-bind="value: fieldBinding().color">
           <option value="text-navy">Navy</option>
@@ -70,7 +70,7 @@
           <option value="text-lightpurple">Light Purple</option>
           <option value="text-mediumpurple">Medium Purple</option>
         </select>
-      </label>
+      </label> -->
       <label for="heading-classes">
         <b>CSS classes (Optional)</b>
         <input
