chore: edit custom heading field

--- a/public/agility/html/heading-field-template.html
+++ b/public/agility/html/heading-field-template.html
@@ -120,6 +120,7 @@
             type="radio"
             class="form-control"
             value="w-600"
+            name="weight"
             data-bind="value: fieldBinding().weight"
             checked
           />
@@ -131,6 +132,7 @@
             type="radio"
             class="form-control"
             value="w-400"
+            name="weight"
             data-bind="value: fieldBinding().weight"
           />
         </label>
