--- a/public/agility/html/heading-field-template.html
+++ b/public/agility/html/heading-field-template.html
@@ -10,7 +10,7 @@
         border: 1px solid #ccc;
         padding: 6px 8px;
       }
-      label {
+      .heading-field label {
         padding: 1rem 0;
         display: flex;
         flex-direction: column;
