chore: rename heading custom field names

--- a/public/agility/html/heading-field-template.html
+++ b/public/agility/html/heading-field-template.html
@@ -33,7 +33,7 @@
   <body>
     <div class="heading-field">
       <label for="heading-type">
-        <b>Type</b>
+        <b>Heading Type</b>
         <select id="heading-type" data-bind="value: fieldBinding().type">
           <option value="h1">Heading 1</option>
           <option value="h2">Heading 2</option>
@@ -45,7 +45,7 @@
         </select>
       </label>
       <label for="heading-value">
-        <b>Text</b>
+        <b>Heading Text</b>
         <textarea
           id="heading-value"
           class="form-control"
@@ -53,7 +53,7 @@
         ></textarea>
       </label>
       <label for="heading-color">
-        <b>Color</b>
+        <b>Heading Color</b>
         <select id="heading-color" data-bind="value: fieldBinding().color">
           <option value=""></option>
           <option value="text-navy">Navy</option>
@@ -79,7 +79,7 @@
         </select>
       </label>
       <label for="heading-size">
-        <b>Size</b>
+        <b>Heading Size</b>
         <select id="heading-size" data-bind="value: fieldBinding().size">
           <option value=""></option>
           <option value="heading-1">Heading 1</option>
@@ -91,7 +91,7 @@
         </select>
       </label>
       <label for="heading-weight">
-        <b>Font Weight</b>
+        <b>Heading Font Weight</b>
         <select id="heading-weight" data-bind="value: fieldBinding().weight">
           <option value=""></option>
           <option value="w-600">Bold</option>
@@ -99,7 +99,7 @@
         </select>
       </label>
       <label for="heading-classes">
-        <b>CSS classes (Optional)</b>
+        <b>Heading CSS classes (Optional)</b>
         <input
           id="heading-classes"
           type="text"
